Commit added!, please let me commit git :sob:

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.16",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
+    "@splidejs/react-splide": "^0.7.12",
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
+    "notion-to-md": "^3.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.174.0",
