--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.0.4",
     "@splidejs/react-splide": "^0.7.12",
     "framer-motion": "^12.4.10",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "15.2.1",
     "notion-to-md": "^3.1.7",
