--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "notion-to-md": "^3.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-iframe": "^1.8.5",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "three": "^0.174.0",
