--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/app/embed/page.js"  ],
   "exclude": [
     "node_modules"
   ]
